# SupermarketCheckout

./: README.MD  pyproject.toml  setup.cfg  setup.py
src/checkout/: checkout_calc.py
tests/: checkout_calc_test.py
