[project]
name = "supermarketcheckout"
version = "0.0.1"
dependencies = [
    'importlib-metadata; python_version>"3.10"',
]
authors = [
    {name = "Gaurav Mishra", email = "gauravmishra84@outlook.com"},
]
description = "Supermarket Checkout Functionality"
readme = "README.MD"
requires-python = ">=3.10"